onlyoffice/onlyoffice-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: onlyoffice
  namespace: default
  labels:
    app: cheese
    task: onlyoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheese
      task: onlyoffice
  template:
    metadata:
      labels:
        app: cheese
        task: onlyoffice
        version: v0.0.1
    spec:
      nodeSelector:
        role: hotstone.com.cn
      containers:
      - name: onlyoffice
        image: onlyoffice/documentserver
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
